--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,14 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="10dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -42,6 +44,7 @@
         android:layout_marginEnd="166dp"
         android:layout_marginRight="166dp"
         android:ems="10"
+        android:maxLength="10"
         android:textAllCaps="true"
         android:hint="MH12AB1234"
         android:inputType="textCapCharacters"
@@ -62,6 +65,7 @@
         app:layout_constraintHorizontal_bias="0.859"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
+
 
 
 
