--- a/app/src/main/res/layout/activity_select_make.xml
+++ b/app/src/main/res/layout/activity_select_make.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".SelectMake">
 
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="80dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
